--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,10 @@ linkedin_username: nguyen-cuong-92988332
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Cuong Nguyen and I'm a senior fullstack web developer. As well as developing web systems I also have experience managing project in both traditional and agile. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name's Cuong Nguyen and I'm a senior fullstack web developer. As well as developing web systems I also have experience managing project in both traditional and agile approach. 
+  Having extensive industry and full life cycle experience in a Java based environment, along with exceptional analytical, design and problem-solving capabilities. Experienced in all the stages of a software product.
+  Having good communication skills, analytical skills and ability to cooperate, support the team. Having ability to work effectively with a team or independently.
+  I am always trying to resolve issues using logical thinking and willing to learn new things. I am a diligent, ambitious and self-motivated developer. 
 
   I am most skilled in: <mark>Java</mark>, <mark>NodeJS</mark> and <mark>Project Management</mark>
 
